[package]
name = "rtshyper_rs"
version = "0.1.0"
authors = ["Ce Mo"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = true

[build-dependencies]
chrono = "0.4.23"
cc = "1.0"

[dependencies]
shyper = { path = "libshyper" }
vm-fdt = { git = "https://github.com/migu4917/vm-fdt", features = ["alloc"] }
fdt = { path = "libfdt-binding" }
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tock-registers = "0.8.0"
spin = { path = "deps/spin" }
buddy_system_allocator = { path = "deps/buddy_system_allocator" }
# spin = { version = "0.9.8" }
# buddy_system_allocator = "0.9.0"
static_assertions = "1.1.0"
derive_more = "0.99.17"
intrusive-collections = "0.9"
cfg-if = "1.0.0"
memoffset = { version = "0.8", default-features = false, features = [
    "unstable_const",
] }

# optional dependencies
cortex-a = { package = "aarch64-cpu", version = "9.3.1", optional = true }
fastrand = { version = "2.0.0", default-features = false, features = [
    "alloc",
], optional = true }

[features]
default = ["tx2"]
tx2 = ["aarch64", "pa-bits-39", "ns16550", "preempt", "memory-reservation"]
qemu = ["aarch64", "pa-bits-39", "pl011", "preempt"]
pi4 = ["aarch64", "pa-bits-39", "gpio", "pl011", "preempt"]
aarch64 = ["cortex-a"]
ramdisk = []
static-config = []
ns16550 = []
pl011 = []
preempt = []
unishyper = []
unilib = []
memory-reservation = ["fastrand"]
pa-bits-39 = []
pa-bits-48 = []
gpio = []
