[package]
name = "rtshyper_rs"
version = "0.1.0"
authors = ["Ce Mo"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
debug = true

[build-dependencies]
chrono = "0.4.23"

[workspace]
members = [
    "deps/buddy_system_allocator",
    "deps/libfdt-binding",
    "deps/libshyper",
    "deps/spin",
]

[dependencies]
shyper = { path = "deps/libshyper" }
fdt = { path = "deps/libfdt-binding" }
spin = { path = "deps/spin" }
buddy_system_allocator = { path = "deps/buddy_system_allocator" }
# spin = { version = "0.9.8" }
# buddy_system_allocator = "0.9.0"
vm-fdt = { git = "https://github.com/migu4917/vm-fdt", features = ["alloc"] }
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tock-registers = "0.8.0"
static_assertions = "1.1.0"
derive_more = "0.99.17"
intrusive-collections = "0.9"
cfg-if = "1.0.0"
memoffset = { version = "0.9", default-features = false, features = [
    "unstable_const",
] }

# optional dependencies
fastrand = { version = "2.0.0", default-features = false, features = [
    "alloc",
], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3.1"
smccc = "0.1.1"

[features]
default = ["tx2"]
tx2 = [
    "pa-bits-39",
    "iommu",
    "vtimer",
    "ns16550",
    "preempt",
    "memory-reservation",
]
qemu = ["pa-bits-39", "pl011", "preempt"]
pi4 = ["pa-bits-39", "gpio", "pl011", "preempt"]
ramdisk = []
static-config = []
ns16550 = []
pl011 = []
preempt = []
unishyper = []
unilib = []
pa-bits-39 = []
pa-bits-48 = []
gpio = []
vtimer = []
balloon = []
iommu = ["smmuv2"]
smmuv2 = []

memory-reservation = ["fastrand", "dynamic-budget"]
# This feature "dynamic-budget" belongs to "memory-reservation"
dynamic-budget = []
trace-memory = []
